--- a/themes/package.json
+++ b/themes/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "lint": "stylelint \"**/*.scss\"",
     "style": "npm run style-light && npm run style-dark",
+    "watch": "sass kmom03/scss/style.scss:kmom03/css/style.css kmom03/scss/style-dark.scss:kmom03/css/style-dark.css --no-source-map --watch ",
     "style-min": "npm run style-light-min && npm run style-dark-min",
     "style-dark": "sass kmom03/scss/style-dark.scss kmom03/css/style-dark.css --no-source-map",
     "style-dark-min": "sass kmom03/scss/style-dark.scss kmom03/css/style-dark.min.css --no-source-map --style compressed",
